# ops-experiments

./: .gitignore  pom.xml
cuda/YacuDecuWrapper/: Makefile
images/: rotatedscaledcenter.tif
native/: cppbuild.sh
native/MKLFFTW/: CMakeLists.txt  README.md  cppbuild.sh
native/MKLFFTW/source/: MKLFFTW.cpp  Makefile
native/YacuDecu/: CMakeLists.txt
org/bytedeco/javacpp/: mkl_rt.java
scripts/: DeconBenchMarkTheoreticalPSF.groovy
src/main/java/net/imagej/ops/experiments/filter/: AbstractNativeFFTFilterF.java
src/main/java/net/imagej/ops/experiments/filter/convolve/: JavaCPPConvolveOp.java  MKLConvolveOp.java  MKLConvolveWrapper.java
src/main/java/net/imagej/ops/experiments/filter/deconvolve/: MKLRichardsonLucyOp.java
src/main/java/net/imagej/ops/experiments/kernel/: ConfocalKernel.java
src/test/java/net/imagej/experiments/kernel/: InteractiveKernelTest.java
src/test/java/net/imagej/experiments/transform/: InteractiveTransformOpTest.java  InteractiveTransformOpTest3D.java
src/test/java/net/imagej/ops/experiments/filter/deconvolve/: InteractiveDeconvolveTest.java  InteractiveDeconvolveTheoreticalTest.java
